<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.ExamenFinal_Ordenamiento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/blue1"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_saludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/cl_fondo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_saludo"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_app" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_fondo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="180dp"
            android:background="@drawable/bg_rouded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_instrucciones"
                style="@style/Textos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/texto_instrucciones"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_inputLayout"
                style="@style/MyTextField"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/input_a_num"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_instrucciones">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_ordenamiento1">

                <TextView
                    android:id="@+id/tv_ingresados"
                    style="@style/Textos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/introducidos"
                    android:textSize="11dp"
                    android:visibility="invisible"/>

                <FrameLayout
                    android:id="@+id/frameLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerNumeros"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_resultado"
                    style="@style/Textos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="11dp"
                    android:visibility="invisible" />

                <FrameLayout
                    android:id="@+id/frameLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:visibility="invisible">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerNumerosOrd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </FrameLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btn_ordenamiento1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ordenamiento1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_inputLayout" />

            <Button
                android:id="@+id/btn_ordenamiento2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ordenamiento2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintBottom_toBottomOf="@+id/btn_ordenamiento1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/btn_ordenamiento1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="205dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>